Basic JavaScript assignment
Add concatenate 2 variables

--- a/Basic JavaScript Projects/Project2_functions/JS/index.html
+++ b/Basic JavaScript Projects/Project2_functions/JS/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic JavaScript</title>
-    <script src="JS/main.js"></script>
+    <title>JavaScript Functions</title>
+    <script>"JS/main.js"</script>
 </head>
 <body>
-<h2>JavaScript Event</h2>
+
+    <h2>JavaScript Event</h2>
 <button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
 <p id="demo"></p>
 
