--- a/Basic JavaScript Projects/Project2_functions/JS/index.html
+++ b/Basic JavaScript Projects/Project2_functions/JS/index.html
@@ -13,6 +13,8 @@
 <button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
 <p id="demo"></p>
 
+<p id= "Concatenate" onclick = "myFunction()">Click Here</p>
+
     
 </body>
 </html>
