--- a/Basic JavaScript Projects/Project2_functions/JS/index.html
+++ b/Basic JavaScript Projects/Project2_functions/JS/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Functions</title>
-    <script>"JS/main.js"</script>
+    <script src="main.js"></script>
 </head>
 <body>
 
@@ -14,6 +14,14 @@
 <p id="demo"></p>
 
 <p id= "Concatenate" onclick = "myFunction()">Click Here</p>
+
+<!--Function expression-->
+<p id="p1"></p>
+<p id="p2"></p>
+
+ 
+
+
 
     
 </body>
