Math Operator Assignment

--- a/Basic JavaScript Projects/Project2_functions/JS/index.html
+++ b/Basic JavaScript Projects/Project2_functions/JS/index.html
@@ -15,9 +15,9 @@
 
 <p id= "Concatenate" onclick = "myFunction()">Click Here</p>
 
-<!--Function expression-->
-<p id="p1"></p>
-<p id="p2"></p>
+<!--Function that performs a calculation and returns a result-->
+<p id="practice"></p>
+
 
  
 
