--- a/Basic JavaScript Projects/Project7_scope_time_function/index.html
+++ b/Basic JavaScript Projects/Project7_scope_time_function/index.html
@@ -24,18 +24,17 @@
     <input id="Age" value=""/>
     <p id="How_old_are_you?"></p>
     <button onclick="Age_Function()">Click here</button>
-    
+
 
     <p>Time of day greeting:</p>
     <input id="hour" value=""/>
     <p id="What_time_of_the_day_is_it?"></p>
-    <button onclick="Time_Function()">Click here</button>
+    <button onclick="timeFunction()">Click here</button>
 
     
-    <p>Time of Day:</p>
-    <input id="Time" value=""/>
+
     <p id="Time_of_day"></p>
-    <button onclick="Time_Function()">Click here to get the time.</button>
+    <button onclick="timeOfDayFunction()">Click here to get the time.</button>
 
 
 
