--- a/Basic JavaScript Projects/Project10_loops_arrays/index.html
+++ b/Basic JavaScript Projects/Project10_loops_arrays/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loops and Arrays</title>
-    <script src="JS/main.js"></script>
+    <script src="JS/main.js" defer></script>
 </head>
 <body>
     
@@ -38,15 +38,14 @@
 
 
     <p id="demo"></p>
-    <button onclick="myFunction()">Click here to execute loop.</button>
-
-
+    
     <p id="add"></p>
-    <button onclick="my_Function()">Click here to execute loop.</button>
+   
+    <p id="newPhone"></p>
 
+    <p id="themApples"></p>
 
-
-
+    <p id="dogList"></p>
 
 </body>
 </html>
