--- a/Pizza_Project/Pizza.html
+++ b/Pizza_Project/Pizza.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza Project</title>
     <script src="Pizza_JavaScript/Pizza.js" defer></script>
     <link rel="stylesheet" type="text/css" href="Pizza_CSS/Pizza.css">
 </head>
@@ -45,6 +45,26 @@
                 <input class="toppings" type="checkbox" name="Topping"
                 value="Meat Trio">Meat Trio<br>
             </div>
+
+            <div class="menu center">
+                <h3>Vegetables:</h3>
+                <input class="toppings" type="checkbox" name="Topping"
+                value="Bell Peppers">Bell Peppers<br>
+                <input class="toppings" type="checkbox" name="Topping"
+                value="Olives">Olives<br>
+                <input class="toppings" type="checkbox" name="Topping"
+                value="Onions">Onions<br>
+                <input class="toppings" type="checkbox" name="Topping"
+                value="Mushrooms">Mushrooms<br>
+                <input class="toppings" type="checkbox" name="Topping"
+                value="Tomatoes">Tomatoes<br>
+                <input class="toppings" type="checkbox" name="Topping"
+                value="Artichoke">Artichoke<br>
+                <input class="toppings" type="checkbox" name="Topping"
+                value="Spinich">Spinich<br>
+            </div>
+
+
             <div id="cart">
                 <div id="showText"></div>
                 <div id="totalPrice"></div>
